--- a/index.html
+++ b/index.html
@@ -7,43 +7,40 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <script src='main.js'></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
-    <form class="row">
-      <h1>Cadastro de Endereço</h1>
+    <form class="row g-3">
+      <h2>Cadastro de Endereço</h2>
         <div class="col-md-6">
-          <label for="inputEmail4" class="form-label">CEP</label>
-          <input type="email" class="form-control" id="cep">
+            <label for="inputZip" class="form-label">CEP</label>
+            <input type="text" class="form-control" id="cep">
+          </div>
+        
+        <div class="col-8">
+          <label for="inputAddress" class="form-label">Endereço</label>
+          <input type="text" class="form-control" id="rua" placeholder="Joaquim Nabuco">
         </div>
-        <div class="col-md-6">
-          <label for="inputPassword4" class="form-label">Rua</label>
-          <input type="password" class="form-control" id="rua">
-        </div>
-        <div class="col-md-2">
-          <label for="inputZip" class="form-label">N°</label>
-          <input type="text" class="form-control" id="n" placeholder="n°">
+        <div class="col-4">
+          <label for="inputAddress" class="form-label">Número</label>
+          <input type="text" class="form-control" id="numero" placeholder="1234">
         </div>
         <div class="col-12">
-          <label for="inputAddress" class="form-label">Bairro</label>
-          <input type="text" class="form-control" id="bairro" placeholder="Rua dos Bobos">
-        </div>
-        <div class="col-12">
-          <label for="inputAddress2" class="form-label">Complemento</label>
-          <input type="text" class="form-control" id="complemento" placeholder="apartamento, hotel, casa, etc.">
+          <label for="inputAddress2" class="form-label">Bairro</label>
+          <input type="text" class="form-control" id="bairro">
         </div>
         <div class="col-md-6">
           <label for="inputCity" class="form-label">Cidade</label>
           <input type="text" class="form-control" id="cidade">
         </div>
-        <div class="col-md-6">
-          <label for="inputCity" class="form-label">estado</label>
-          <input type="text" class="form-control" id="estado">
+        <div class="col-md-4">
+          <label for="inputState" class="form-label">Estado</label>
+          <input id="estado" class="form-control">
         </div>
         <div class="col-12">
-          <button type="submit" class="btn btn-primary">Entrar</button>
+          <button type="submit" class="btn btn-primary">Cadastrar</button>
         </div>
-    </form>
+      </form>
+      <script src="main.js"></script>    
 </body>
 </html>
