--- a/index.html
+++ b/index.html
@@ -6,22 +6,23 @@
     <title>Cadastro de Endereço</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <form class="row g-3">
       <h2>Cadastro de Endereço</h2>
         <div class="col-md-6">
             <label for="inputZip" class="form-label">CEP</label>
-            <input type="text" class="form-control" id="cep">
+            <input type="text" class="form-control" id="cep" placeholder="86010060">
           </div>
         
         <div class="col-8">
           <label for="inputAddress" class="form-label">Endereço</label>
-          <input type="text" class="form-control" id="rua" placeholder="Joaquim Nabuco">
+          <input type="text" class="form-control" id="rua">
         </div>
         <div class="col-4">
           <label for="inputAddress" class="form-label">Número</label>
-          <input type="text" class="form-control" id="numero" placeholder="1234">
+          <input type="text" class="form-control" id="numero" >
         </div>
         <div class="col-12">
           <label for="inputAddress2" class="form-label">Bairro</label>
