retirada "./" do script js

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <button type="submit" class="btn btn-primary">Cadastrar</button>
         </div>
       </form>
-      <script src="./main.js"></script>    
+      <script src="main.js"></script>    
 
       
 </body>
